# DockerPodApi

./: .gitignore  README.md
models/echo-dia/: .gitignore  README.md
models/echo-dia/app/: config.py  jobs.py  pipeline.py
models/echo-dia/bazel/: BUILD.bazel
models/echo-fast/: README.md
models/echo-fast/app/: download.py  pipeline.py  server.py
models/echo-fast/bazel/: BUILD.bazel  MODULE.bazel
models/echo-fast/scripts/: build_layers.sh
models/echo-l4/: README.md  requirements.txt
models/echo-l4/app/: config.py  download.py  pipeline.py  server.py  trt_chain.py
models/echo-l4/bazel/: BUILD.bazel
models/echo-light/: README.md
models/echo-light/app/: pipeline.py
models/echo-light/bazel/: BUILD.bazel
shared/: API_CONTRACT.md  DEPLOY.md  SECURITY.md  SMOKE_TESTS.md
